labs/c_lab/labs/lab3/errors.txt
rm: run: No such file or directory
pointers.c:15:17: error: argument type 'void' is incomplete
        printf("%d\n", *ptr);
                       ^
1 error generated.
